--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://lists.swift.org/*"],
+      "matches": ["https://lists.swift.org/pipermail/*"],
       "css": ["styles.css"],
       "js": ["mail.js"]
     }
